--- a/V2rayNG/build.gradle
+++ b/V2rayNG/build.gradle
@@ -3,7 +3,8 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+//        jcenter()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'https://maven.google.com' }
     }
     dependencies {
@@ -18,7 +19,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+//        jcenter()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'https://maven.google.com' }
     }
 }
